* Fix the dpkg-shlibdeps generation of packages built while nvidia-glx is   installed: add back a special shlibs entry for libGL.so.1 and remove   libGL.so.1 from the symbols file to ensure to generate a dependency on   libgl1-mesa-glx | libgl1 only.  (Closes: #587091)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1150 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-libgl1-ia32.lintian-overrides.in
+++ b/debian/nvidia-libgl1-ia32.lintian-overrides.in
@@ -13,3 +13,10 @@ nvidia-libgl1#LEGACY#-ia32: diversion-for-unknown-file usr/lib32/libGL.so.1.2 pr
 # In order to retain its functionality (i.e. pointing the MESA libGL.so.1)
 # we ship a link pointing to the diverted library.
 nvidia-libgl1#LEGACY#-ia32: non-dev-pkg-with-shlib-symlink
+
+# Packages built against the NVIDIA libGL should declare dependencies on
+# the free version for Debian's purposes.  Therefore we use a special
+# combination of shlibs files (for libGL.so.1) and symbols files (for all
+# other libraries).
+nvidia-libgl1#LEGACY#-ia32: shlibs-declares-dependency-on-other-package ia32-libs (>= 20090804)
+nvidia-libgl1#LEGACY#-ia32: shlib-missing-in-symbols-control-file libGL 1 for usr/lib32/libGL.so.#VERSION#
