--- a/debian/nvidia-libgl1.lintian-overrides.in
+++ b/debian/nvidia-libgl1.lintian-overrides.in
@@ -14,6 +14,13 @@ nvidia-libgl1#LEGACY#: diversion-for-unknown-file usr/lib/libGL.so.1.2 preinst:*
 # The diversions are placed here.
 nvidia-libgl1#LEGACY#: package-contains-empty-directory usr/lib/nvidia/
 
+# Packages built against the NVIDIA libGL should declare dependencies on
+# the free version for Debian's purposes.  Therefore we use a special
+# combination of shlibs files (for libGL.so.1) and symbols files (for all
+# other libraries).
+nvidia-libgl1#LEGACY#: shlibs-declares-dependency-on-other-package libgl1-mesa-glx | libgl1
+nvidia-libgl1#LEGACY#: shlib-missing-in-symbols-control-file libGL 1 for usr/lib/libGL.so.#VERSION#
+
 # This package is a strange special case since it overrides standard
 # libraries and diverts them, so the package name won't ever be able to
 # match the library names it provides.
