fix get-orig-source tarball name for legacy builds
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1154 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -211,7 +211,7 @@ get-orig-source:
 	    mkdir nvidia-graphics-drivers-$${newversion}.orig ; \
 	    mv *.run nvidia-graphics-drivers-$${newversion}.orig/ ; \
 	    chmod 0755 nvidia-graphics-drivers-$${newversion}.orig/* ; \
-	    tar cfvz ../nvidia-graphics-drivers_$$newversion.orig.tar.gz \
+	    tar cfvz ../nvidia-graphics-drivers$(legacy)_$$newversion.orig.tar.gz \
 		--owner=root --group=src \
 		nvidia-graphics-drivers-$${newversion}.orig
 	rm -rf get-orig-source
