--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Package: nvidia-glx
 Architecture: i386 amd64
 Pre-Depends: dpkg (>= 1.15.7.2)
 Depends:
- nvidia-libgl1${nvidia:Legacy} (= ${binary:Version}),
+ libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
  nvidia-kernel${nvidia:Legacy}-${nvidia:Version},
  ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-vdpau-driver (>= ${nvidia:Version})
@@ -55,7 +55,9 @@ Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
 Package: nvidia-glx-ia32
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
-Depends: nvidia-kernel${nvidia:Legacy}-${nvidia:Version},
+Depends:
+ libgl1-nvidia${nvidia:Legacy}-glx-ia32 (= ${binary:Version}),
+ nvidia-kernel${nvidia:Legacy}-${nvidia:Version},
  ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-vdpau-driver-ia32 (>= ${nvidia:Version})
 Suggests: nvidia-settings,
@@ -82,16 +84,18 @@ Description: NVIDIA binary driver 32-bit libs${nvidia:LegacyDesc}
  of supported GPUs and PCIIDs.
 
 Package: nvidia-glx-dev
+Section: non-free/oldlibs
 Architecture: i386 amd64
-Depends: nvidia-libgl1${nvidia:Legacy}-dev, ${misc:Depends}
+Depends: libgl1-nvidia${nvidia:Legacy}-dev, ${misc:Depends}
 Description: NVIDIA OpenGL development files (transitional package)${nvidia:LegacyDesc}
  This is a transitional dummy package to aid migration to
- nvidia-libgl1${nvidia:Legacy}-dev.
+ libgl1-nvidia${nvidia:Legacy}-dev.
  .
  For building portable OpenGL applications, please install libgl1-mesa-dev
  instead.
 
-Package: nvidia-libgl1
+Package: libgl1-nvidia-glx
+Section: non-free/libs
 Architecture: i386 amd64
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
@@ -101,10 +105,11 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
- nvidia-libgl1,
+ libgl1-nvidia-glx,
 Conflicts:
- nvidia-libgl1,
+ libgl1-nvidia-glx,
  fglrx-glx,
+ nvidia-glx${nvidia:Legacy} (<< 195.36.31),
 Replaces: nvidia-glx${nvidia:Legacy} (<< 195.36.31)
 Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  These binary libraries provide optimized hardware acceleration of
@@ -114,10 +119,11 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  plus complimentary Quadros and nforce.  Look at the legacy packages
  for older cards.
  .
- See /usr/share/doc/nvidia-libgl1${nvidia:Legacy}/README.txt.gz for a complete list
+ See /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz for a complete list
  of supported GPUs and PCIIDs.
 
-Package: nvidia-libgl1-ia32
+Package: libgl1-nvidia-glx-ia32
+Section: non-free/libs
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
 Depends:
@@ -128,10 +134,11 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
- nvidia-libgl1-ia32,
+ libgl1-nvidia-glx-ia32,
 Conflicts:
- nvidia-libgl1-ia32,
+ libgl1-nvidia-glx-ia32,
  fglrx-glx-ia32,
+ nvidia-glx${nvidia:Legacy}-ia32 (<< 195.36.31),
 Replaces: nvidia-glx${nvidia:Legacy}-ia32 (<< 195.36.31)
 Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
  These binary 32-bit libraries provide optimized hardware acceleration of
@@ -141,20 +148,21 @@ Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
  plus complimentary Quadros and nforce.  Look at the legacy packages
  for older cards.
  .
- See /usr/share/doc/nvidia-libgl1${nvidia:Legacy}/README.txt.gz for a complete list
+ See /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz for a complete list
  of supported GPUs and PCIIDs.
 
-Package: nvidia-libgl1-dev
+Package: libgl1-nvidia-dev
+Section: non-free/libdevel
 Architecture: i386 amd64
 Depends:
- nvidia-libgl1${nvidia:Legacy} (= ${binary:Version}),
+ libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
  libx11-dev,
  ${misc:Depends}
 Recommends: libgl1-mesa-dev | libgl-dev
 Provides:
- nvidia-libgl1-dev,
+ libgl1-nvidia-dev,
 Conflicts:
- nvidia-libgl1-dev,
+ libgl1-nvidia-dev,
 Replaces: nvidia-glx${nvidia:Legacy}-dev
 Description: NVIDIA OpenGL development files${nvidia:LegacyDesc}
  This package contains the development files for the NVIDIA OpenGL
