--- a/debian/rules
+++ b/debian/rules
@@ -14,11 +14,11 @@ filename_x86_64		 = $(NVIDIA_FILENAME_X86_64)
 dirname_x86		 = $(NVIDIA_DIRNAME_X86)
 dirname_x86_64		 = $(NVIDIA_DIRNAME_X86_64)
 
-ALL_CONTROL	:= $(wildcard debian/nvidia-glx* debian/nvidia-libgl1* debian/nvidia-kernel*)
-LEGACY_CONTROL	:= $(wildcard debian/nvidia-glx$(legacy)* debian/nvidia-libgl1$(legacy)* debian/nvidia-kernel$(legacy)*)
+ALL_CONTROL	:= $(wildcard debian/nvidia-glx* debian/libgl1-nvidia* debian/nvidia-kernel*)
+LEGACY_CONTROL	:= $(wildcard debian/nvidia-glx$(legacy)* debian/libgl1-nvidia$(legacy)* debian/nvidia-kernel$(legacy)*)
 RENAME_CONTROL	 = $(filter-out $(LEGACY_CONTROL),$(ALL_CONTROL))
 RENAMED_CONTROL	 = $(patsubst debian/nvidia-glx%,debian/nvidia-glx$(legacy)%,\
-			$(patsubst debian/nvidia-libgl1%,debian/nvidia-libgl1$(legacy)%,\
+			$(patsubst debian/libgl1-nvidia%,debian/libgl1-nvidia$(legacy)%,\
 			$(patsubst debian/nvidia-kernel%,debian/nvidia-kernel$(legacy)%,\
 				$(RENAME_CONTROL))))
 TEMPLATES	:= $(wildcard debian/*.in debian/module/debian/*.in)
@@ -148,11 +148,13 @@ override_dh_bugfiles:
 override_dh_makeshlibs:
 	dh_makeshlibs -Xvdpau/libvdpau_nvidia.so
 	# Redirect shlibs for libGL.so.1 to libgl1-mesa-glx | libgl1.
-	sed -i -e '/^libGL 1 /s/.*/libGL 1 libgl1-mesa-glx | libgl1/' debian/nvidia-libgl1$(legacy)/DEBIAN/shlibs
-	sed -i -e '/^libGL 1 /s/.*/libGL 1 ia32-libs (>= 20090804)/' debian/nvidia-libgl1$(legacy)-ia32/DEBIAN/shlibs
+	sed -i -e '/^libGL 1 /s/.*/libGL 1 libgl1-mesa-glx | libgl1/' debian/libgl1-nvidia$(legacy)-glx/DEBIAN/shlibs
+	test ! -d debian/libgl1-nvidia$(legacy)-glx-ia32 || \
+		sed -i -e '/^libGL 1 /s/.*/libGL 1 ia32-libs (>= 20090804)/' debian/libgl1-nvidia$(legacy)-glx-ia32/DEBIAN/shlibs
 	# Remove libGL.so from symbols files in order not to override our special shlibs files.
-	sed -i -e '/^libGL\.so/,/^lib/{/^libGL\.so\|^ /d}' debian/nvidia-libgl1$(legacy)/DEBIAN/symbols
-	sed -i -e '/^libGL\.so/,/^lib/{/^libGL\.so\|^ /d}' debian/nvidia-libgl1$(legacy)-ia32/DEBIAN/symbols
+	sed -i -e '/^libGL\.so/,/^lib/{/^libGL\.so\|^ /d}' debian/libgl1-nvidia$(legacy)-glx/DEBIAN/symbols
+	test ! -d debian/libgl1-nvidia$(legacy)-glx-ia32 || \
+		sed -i -e '/^libGL\.so/,/^lib/{/^libGL\.so\|^ /d}' debian/libgl1-nvidia$(legacy)-glx-ia32/DEBIAN/symbols
 
 override_dh_gencontrol:
 	dh_gencontrol -- -V'nvidia:Version=$(version)' -V'nvidia:Legacy=$(legacy)' \
@@ -190,7 +192,7 @@ ifneq (,$(legacy))
 nvidia-glx$(legacy)%: nvidia-glx%
 	cp -a $< $@
 
-nvidia-libgl1$(legacy)%: nvidia-libgl1%
+libgl1-nvidia$(legacy)%: libgl1-nvidia%
 	cp -a $< $@
 
 nvidia-kernel$(legacy)%: nvidia-kernel%
