--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -23,4 +23,4 @@ libgl1-nvidia#LEGACY#-glx: package-name-doesnt-match-sonames
 
 # Due to complex maintainer script operations (migration of diversions) a
 # simple Breaks+Recommends is not sufficient to ensure clean up-/downgrades.
-libgl1-nvidia-glx: conflicts-with-version nvidia-glx#LEGACY# *
+libgl1-nvidia#LEGACY#-glx: conflicts-with-version nvidia-glx#LEGACY# *
