--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -1,3 +1,3 @@
 # The NVIDIA license does not allow any form of modification.
-libnvidia-compiler1: sharedobject-in-library-directory-missing-soname
-#!amd64#libnvidia-compiler1: spelling-error-in-binary
+libnvidia-compiler: sharedobject-in-library-directory-missing-soname
+#!amd64#libnvidia-compiler: spelling-error-in-binary
