--- a/debian/rules
+++ b/debian/rules
@@ -50,7 +50,7 @@ unpack-stamp: ${filename_x86} ${filename_x86_64}
 nvidia.ids: unpack-stamp
 	sed -e '/^A1/,/^Below/{/ 0x/s/.* 0x\([0-9a-fA-F]\{4\}\).*/10DE\1/p};d' \
 		NVIDIA-Linux-$(DEB_HOST_ARCH)/usr/share/doc/README.txt \
-		> $@
+		| tr a-f A-F | sort -u > $@
 	if ! cmp -s debian/nvidia.ids nvidia.ids ; then \
 		diff -u debian/nvidia.ids nvidia.ids || true ; \
 		echo "*** Supported PCI IDs have changed. See diff above. Aborting. ***"; \
