do not fail creating the dkms tree if the patch series is empty
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1228 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -133,7 +133,7 @@ override_dh_auto_install:
 	mv $(module_source) $(dkms_source)
 	rmdir $(dir $(module_source))
 	cd $(dkms_source) \
-	    && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a \
+	    && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2 \
 	    && rm -rf .pc debian
 	ls -la $(dkms_source)
 	dh_dkms -V $(version)
