update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1237 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-dev.lintian-overrides.in
+++ b/debian/libgl1-nvidia-dev.lintian-overrides.in
@@ -1,3 +1,6 @@
 # Due to complex maintainer script operations (migration of diversions) a
 # simple Breaks+Recommends is not sufficient to ensure clean up-/downgrades.
 libgl1-nvidia#LEGACY#-dev: conflicts-with-version nvidia-glx#LEGACY#-dev *
+
+# We provide ourselves as a virtual package.
+libgl1-nvidia-dev: package-relation-with-self provides: libgl1-nvidia-dev
