add a target to nicely wrap a long list of GPUs (manual use only)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1279 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -212,6 +212,11 @@ override_dh_strip:
 debian/module/debian/changelog: debian/changelog
 	sed '1s/^nvidia-graphics-drivers/nvidia-kernel/g' $< > $@
 
+# only invoked manually
+%.txt: %.list
+	sed -e 's/ /#/g; s/#*$$/,/; $$ s/,$$//' $< | ( tr '\n' ' '; echo ) \
+		| fold -s -w 78 | sed -e 's/#/ /g; s/^/ /; s/ *$$//' > $@
+
 # Renaming control files for legacy packaging
 ifneq (,$(legacy))
 nvidia-glx$(legacy)%: nvidia-glx%
