Move diversions to /usr/lib{,32}/nvidia/diversions
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1289 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx-ia32.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx-ia32.lintian-overrides.in
@@ -5,6 +5,9 @@ libgl1-nvidia#LEGACY#-glx-ia32: shlib-with-non-pic-code
 libgl1-nvidia#LEGACY#-glx-ia32: shlib-without-PT_GNU_STACK-section
 libgl1-nvidia#LEGACY#-glx-ia32: spelling-error-in-binary
 
+# The diversions are placed here.
+libgl1-nvidia#LEGACY#-glx-ia32: package-contains-empty-directory usr/lib32/nvidia/diversions/
+
 # We divert the original /usr/lib32/libGL.so symlink.
 # In order to retain its functionality (i.e. pointing the MESA libGL.so.1)
 # we ship a link pointing to the diverted library.
