--- a/debian/nvidia-glx.lintian-overrides.in
+++ b/debian/nvidia-glx.lintian-overrides.in
@@ -6,7 +6,7 @@ nvidia-glx#LEGACY#: embedded-libpng
 #!amd64#nvidia-glx#LEGACY#: shlib-without-PT_GNU_STACK-section
 
 # The diversions are placed here.
-nvidia-glx#LEGACY#: package-contains-empty-directory usr/lib/nvidia/
+nvidia-glx#LEGACY#: package-contains-empty-directory usr/lib/nvidia/diversions/
 
 # Referenced by upstream documentation.
 nvidia-glx#LEGACY#: script-with-language-extension usr/bin/nvidia-bug-report.sh
